--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@starknet-react/chains": "^3.1.2",
+    "@starknet-react/core": "^3.7.2",
     "axios": "^1.8.2",
     "framer-motion": "^12.4.10",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
-    "react-scroll-parallax": "^3.4.5"
+    "react-scroll-parallax": "^3.4.5",
+    "simpler-state": "^1.2.2",
+    "starknet": "^6.24.1",
+    "starknetkit": "^2.10.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "tailwindcss": "^4",
+    "typescript": "^5.8.3"
   }
 }
