--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fmt": "prettier --write ."
   },
   "dependencies": {
     "@starknet-react/chains": "^3.1.2",
@@ -31,6 +32,7 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5.8.3"
   }
