--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.4.10",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.477.0",
+    "nanoid": "^5.1.5",
     "next": "15.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
