--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.10",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.477.0",
     "nanoid": "^5.1.5",
     "next": "15.2.1",
@@ -31,7 +33,8 @@
     "react-scroll-parallax": "^3.4.5",
     "simpler-state": "^1.2.2",
     "starknet": "^6.24.1",
-    "starknetkit": "^2.10.4"
+    "starknetkit": "^2.10.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
