--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "StarkPay Backend Server",
   "main": "dist/index.js",
       "scripts": {
-      "start": "node dist/index.js",
+      "start": "node scripts/startup.js && node dist/index.js",
       "dev": "nodemon --exec ts-node src/index.ts",
       "build": "node scripts/build.js",
       "watch": "tsc --watch",
